[gd_scene load_steps=6 format=3 uid="uid://d23cu31e8s3s6"]

[ext_resource type="Theme" uid="uid://dsowi08f2y6iv" path="res://Themes/rootTheme.tres" id="1_s8x7h"]
[ext_resource type="StyleBox" uid="uid://cqjpxgwhrhqj2" path="res://Themes/InnerPanel.tres" id="2_6gnoy"]
[ext_resource type="Texture2D" uid="uid://p871kcr0eyx6" path="res://Graphics/SOUVUTU0.png" id="3_6kule"]
[ext_resource type="Script" path="res://Scripts/Menus/StatsPanel/EquipmentPanel.gd" id="3_mpj4f"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0g26s"]
atlas = ExtResource("3_6kule")
region = Rect2(96, 56, 8, 8)

[node name="EquipmentPanel" type="Panel"]
offset_right = 560.0
offset_bottom = 355.0
theme = ExtResource("1_s8x7h")
theme_override_styles/panel = ExtResource("2_6gnoy")
script = ExtResource("3_mpj4f")

[node name="WeaponControl" type="Control" parent="."]
layout_mode = 1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -178.0
grow_horizontal = 2
grow_vertical = 2

[node name="WeaponLabel" type="RichTextLabel" parent="WeaponControl"]
layout_mode = 0
offset_right = 80.0
offset_bottom = 26.0
text = "Weapon:"
fit_content = true

[node name="WeaponSprite" type="Sprite2D" parent="WeaponControl"]
position = Vector2(16, 48)
scale = Vector2(4, 4)
texture = SubResource("AtlasTexture_0g26s")

[node name="WeaponName" type="RichTextLabel" parent="WeaponControl"]
clip_contents = false
layout_mode = 0
offset_left = 40.0
offset_top = 34.0
offset_right = 240.0
offset_bottom = 60.0
text = "Item Name Goes Here"
fit_content = true

[node name="ArmorControl" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 178.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2

[node name="ArmorLabel" type="RichTextLabel" parent="ArmorControl"]
offset_right = 80.0
offset_bottom = 26.0
text = "Armor:"
fit_content = true

[node name="ArmorSprite" type="Sprite2D" parent="ArmorControl"]
position = Vector2(16, 48)
scale = Vector2(4, 4)
texture = SubResource("AtlasTexture_0g26s")

[node name="ArmorName" type="RichTextLabel" parent="ArmorControl"]
clip_contents = false
offset_left = 40.0
offset_top = 34.0
offset_right = 240.0
offset_bottom = 60.0
text = "Item Name Goes Here"
fit_content = true
